syntax = "proto3";

option csharp_namespace = "ProductService";

package product_stock;

// The greeting service definition.
service ProductStock {
  // Sends a greeting
  rpc CheckProduct (CheckProductRequest) returns (CheckProductReply);
  
  rpc ReserveProduct (ReserveProductRequest) returns (ReserveProductReply);
}

// The request message containing the user's name.
message CheckProductRequest {
  int32 product_id = 1;
}

// The response message containing the greetings.
message CheckProductReply {
  bool is_available = 1;
}

// The request message containing the user's name.
message ReserveProductRequest {
  int32 product_id = 1;
  int32 stock = 2;
}

// The response message containing the greetings.
message ReserveProductReply {
  bool is_successful = 1;
}